--- a/MVC.Budget.MicVerg/BudgetApp/Budget/wwwroot/index.html
+++ b/MVC.Budget.MicVerg/BudgetApp/Budget/wwwroot/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="..\css\custom.css">
     <script src="..\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
     <script src="js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript">
+        getCategories();
+        getTransactions();
+    </script>
 
 
     <title>BudgetApp</title>
@@ -145,7 +149,7 @@
 <section>
 <div class="m-5">
     <form>
-        <table class="table text-center table-striped table-hover" id="transactions">
+        <table class="table text-center table-striped table-hover align-middle" id="transactions">
             <tr>
                 <th>Description<input class="form-control form-control-sm" type="text"></th>
                 <th>Amount</th>
