started on _displayCategories()

--- a/MVC.Budget.MicVerg/BudgetApp/Budget/wwwroot/index.html
+++ b/MVC.Budget.MicVerg/BudgetApp/Budget/wwwroot/index.html
@@ -158,7 +158,7 @@
                         <input type="date" class="form-control text-center" placeholder="Date" onchange="filterDate()" onkeyup="filterDate()" id="filterdate"></select>
                     </th>
                     <th>
-                        <select class="form-select form-select-sm" aria-label="Category select" id="filtercategory" onkeyup="filterCategories()">
+                        <select class="form-select form-select-sm" aria-label="Category select" id="filtercategory" onchange="filterCategories()">
                         <option selected>Select Category</option>
                         </select>
                     </th>
